--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     align-items: center;
-    margin: 100px;
+    margin: 100px 0 40px 100px;
 }
 
 .text-box{
@@ -15,3 +15,9 @@
 body{
     background-color: black;
 }
+
+.message {
+    color: white;
+    font-size: 20px;
+    margin-left: 100px;
+  }
