--- a/style.css
+++ b/style.css
@@ -48,3 +48,40 @@ body {
 	font-size: 40px;
 	font-weight: bold;
 }
+
+#login-form {
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+#login-form > h1 {
+	color: white;
+	font-style: italic;
+}
+
+.input-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 400px;
+	height: 60px;
+	border-radius: 30px;
+	background-color: white;
+}
+
+.input-box > input {
+	width: 300px;
+	height: 50px;
+	border: none;
+	font-size: 30px;
+}
+
+.login-btn {
+	width: 180px;
+	height: 50px;
+	background-color: orange;
+	border-radius: 25px;
+	color: white;
+	font-size: 25px;
+}
