--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: black;
+    position: relative;
 }
 
 .message {
@@ -43,3 +44,24 @@ body {
     color: black;
     box-shadow: 0 0 0 2px orange;
 }
+
+.login {
+    color: white;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 30px;
+    position: absolute;
+    top: 100px;
+    right: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.login input {
+    padding: 10px 40px;
+    border-radius: 25px;
+    font-size: 18px;
+}
+
