--- a/style.css
+++ b/style.css
@@ -65,3 +65,10 @@ body {
     font-size: 18px;
 }
 
+.login button {
+    padding: 5px 35px;
+    background-color: orange;
+    color: white;
+    font-size: 16px;
+    border-radius: 18px;
+}
