--- a/style.css
+++ b/style.css
@@ -43,10 +43,13 @@ body {
     height: 200px;
     font-size: 20px;
     line-height: 1.3;
-    text-align: justify;
     word-break: keep-all;
-    text-justify: inter-word;
+    text-align: justify;
+    text-justify: inter-word;    
+}
 
+p {
+    width: 450px;
 }
 
 .clear {
@@ -62,10 +65,12 @@ body {
     color: black;
     margin: 10px;
     border-radius: 20px;
-    float:left;
+    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 900;
+    font-size: 30px;
 }
 
 #right {
