--- a/style.css
+++ b/style.css
@@ -1,38 +1,46 @@
+/* 전체 배경 및 폰트색 변경 */
 * {
     background-color: black;
     color: white;
 }
 
+/* '화면 쪼개기'를 좌우로 나란히 배치 */
 body {
     display: flex;
 }
 
+/* 왼쪽에게 절반 */
 .page_left {
     width: 50%;
     margin: 100px;
 }
 
+/* 묶음들 가로 정렬 및 여백 정리 */
 .container {
     display: flex;
     margin: 30px 0;
     gap: 20px;
 }
 
-.container h1 {
+/* <h1>태그의 여백 정리 */
+h1 {
     margin: 0;
 }
 
+/* text id 세로 정렬 및 여백 정리 */
 #text {
     flex-direction: column;
     gap: 20px;
 }
 
-#text p {
+/* <p>태그의 여백 및 폰트 크기 */
+p {
     margin: 0;
     font-size: 20px;
 }
 
-.container h3 {
+/* 오른쪽면 마지막 묶음 - 가로 정렬, 간격 띄우기, 중심 위치 등 */
+h3 {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -47,7 +55,7 @@ body {
 }
 
 
-
+/* 오른쪽에게 남은 절반, 내용 세로 중심 정렬 및 여백 정리*/
 .page_right {
     width: 50%;
     display: flex;
@@ -58,15 +66,14 @@ body {
     gap: 15px;
 }
 
-.page_right h3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* <h2>태그 여백 정리 및 글씨체 조정 */
+h2 {
     margin: 0;
     font-size: 30px;
     font-style: italic;
 }
 
+/* 아이콘과 <input>태그 사이의 위치 및 크기 등 조절 */
 .page_right .container {
     display: flex;
     justify-content: center;
@@ -79,11 +86,13 @@ body {
     gap: 10px;
 }
 
+/* 아이콘 배경 투명화 */
 svg {
     background-color: transparent;
 }
 
-.page_right input {
+/* <input>태그 꾸미기 */
+input {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -97,7 +106,8 @@ svg {
     padding: 0;
 }
 
-.page_right button {
+/* <button>태그 꾸미기 */
+button {
     display: flex;
     justify-content: center;
     align-items: center;
