--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 /* '화면 쪼개기'를 좌우로 나란히 배치 */
 body {
     display: flex;
+    margin: 0;
 }
 
 /* 왼쪽에게 절반 */
@@ -15,7 +16,7 @@ body {
     margin: 100px;
 }
 
-/* 묶음들 가로 정렬 및 여백 정리 */
+/* 묶음들 가로 배열 및 여백 정리 */
 .container {
     display: flex;
     margin: 30px 0;
@@ -27,7 +28,7 @@ h1 {
     margin: 0;
 }
 
-/* text id 세로 정렬 및 여백 정리 */
+/* text id 세로 배열 및 여백 정리 */
 #text {
     flex-direction: column;
     gap: 20px;
@@ -69,11 +70,11 @@ h3 {
 /* <h2>태그 여백 정리 및 글씨체 조정 */
 h2 {
     margin: 0;
-    font-size: 30px;
+    font-size: 40px;
     font-style: italic;
 }
 
-/* 아이콘과 <input>태그 사이의 위치 및 크기 등 조절 */
+/* 오른쪽면 container에게만 적용 / 아이콘과 <input>태그 사이의 위치 및 크기 등 조절 */
 .page_right .container {
     display: flex;
     justify-content: center;
@@ -99,11 +100,16 @@ input {
     background-color: transparent;
     color: black;
     font-size: 16px;
-    width: 250px;
+    width: 210px;
     height: 30px;
     border-color: transparent;
-    border-radius: 15px;
+    margin-right: 15px;
     padding: 0;
+}
+
+/* <input>태그의 강조 테두리 없애기 */
+input:focus {
+    outline: none;
 }
 
 /* <button>태그 꾸미기 */
@@ -113,8 +119,9 @@ button {
     align-items: center;
     background-color: orange;
     color: white;
+    font-weight: 700;
     font-size: 17px;
-    width: 130px;
+    width: 120px;
     height: 40px;
     border-color: transparent;
     border-radius: 20px;
