--- a/style.css
+++ b/style.css
@@ -51,24 +51,30 @@ body {
     font-weight: bold;
     font-size: 30px;
     position: absolute;
-    top: 100px;
-    right: 200px;
+    top: 250px;
+    right: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
 }
 
 .login input {
-    padding: 10px 40px;
+    padding: 13px 40px;
     border-radius: 25px;
     font-size: 18px;
 }
 
 .login button {
-    padding: 5px 35px;
+    padding: 7px 35px;
     background-color: orange;
     color: white;
     font-size: 16px;
     border-radius: 18px;
+}
+
+.left {
+    position: absolute;
+    top: 50px;   
+    left: 100px;  
 }
